  This makes it possible to rebuild with `CCACHE_CPP2` set without having to
  clear the cache to get new results.

- Don't try to reset a non-existing stats file. This avoids ``No such file or
  directory'' messages in the ccache log when the cache directory doesn't
  exist.

- Fixed a bug where ccache deleted clang diagnostics after compiler failures.


ccache 3.2.1
------------
Release date: 2014-12-10


Bug fixes
~~~~~~~~~

- Fixed regression in temporary file handling, which lead to incorrect
  permissions for stats, manifest and ccache.conf files in the cache.

- `CACHEDIR.TAG` files are now created in the [0-9a-f] subdirectories so that
  ccache.conf is not lost in backups.

- Made the default cache size suffix `G`, as previously documented.

- `-fdiagnostics-color=auto` is now passed to the compiler even if stderr is
  redirected. This fixes a problem when, for instance, a configure test probes
  if the compiler (wrapped via ccache) supports `-fdiagnostics-color=auto`.

- Added missing documentation for `max_files` and `max_size` configuration
  options.


ccache 3.2
----------
Release date: 2014-11-17


New features and improvements
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Added support for configuring ccache via one or several configuration files
  instead of via environment variables. Environment variables still have
  priority but are no longer the recommended way of customizing ccache
  behavior. See the manual for more information.

- Added support for compiler error/warning messages with color.

- Made creation of temporary directories and cache directories smarter to avoid
  unnecessary `stat` calls.

- Improved efficiency of the algorithm that scans for `__DATE_` and `__TIME__`
  tokens in the hashed source code.

- Added support for several binaries (separated by space) in `CCACHE_PREFIX`.

- The `-c` option is no longer passed to the preprocessor. This fixes problems
  with clang and Solaris's C++ compiler.
